[package]
name = "rust-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.45"

[dependencies.web-sys]
version = "0.3.58"
features=[
    "console", 
    "CanvasRenderingContext2d", 
    "HtmlCanvasElement", 
    "Window", 
    "Document",
    "MouseEvent",
    "HtmlElement",
    "DomRect",
    "Element"]

[lib]
crate-type = ["cdylib", "rlib"]